fixed color contrast error on green class

--- a/css/style.css
+++ b/css/style.css
@@ -70,11 +70,11 @@ div {
 }
 
 .yellow p {
-    color: #707070;
+    color: #707070;ß
 }
 
 .green {
-    background: #00EB00;
+    background: #008500;
     text-align: left;
     margin-right: 50px;
     border: 2px 5px 0px 0px;
